# erlxsl-sablotron

./: INSTALL  Makefile.am  Makefile.bak  README.md  bootstrap.sh  configure  configure.ac  wscript
include/: config.h.in
src/: erlxsl_sablot.c
